# code-extractor

./: CHANGELOG.md  README.md  package-lock.json  package.json  vite.config.ts
.github/workflows/: release.yml
docs/: for-developers.md  for-product.md  for-testers.md  getting-started.md  index.md
docs/.vitepress/: config.ts
docs/en/: for-developers.md  for-product.md  for-testers.md  getting-started.md
docs/zh/: for-developers.md  for-product.md  for-testers.md  getting-started.md  index.md
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: agent.rs  config.rs  directory.rs  export.rs  git.rs  mod.rs  skills.rs
src-tauri/src/models/: agent.rs  mod.rs
src/components/: AgentConfigSection.tsx  AgentDiffViewer.tsx  AgentMessageList.tsx  AgentPanel.tsx  AgentSessionList.tsx  AgentSkillPicker.tsx  AgentStatusBar.tsx  AgentTaskInput.tsx  AgentToolCallCard.tsx  ConfigPanel.tsx  DirectoryTree.tsx  ErrorBoundary.tsx  PreviewPanel.tsx  ShortcutHelpModal.tsx  Toolbar.tsx  TreeNode.tsx  UpdateDialog.tsx
src/context/: AgentContext.tsx  AppContext.tsx
src/hooks/: useAgent.ts  useAgentConfig.ts  useAgentEvents.ts  useAppConfig.ts  useDirectoryTree.ts  useExport.ts  usePresets.ts  useUpdater.ts
src/lib/: treeUtils.ts
src/types/: agent.ts  index.ts
